--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
 OAUTH_REALM=master
 OAUTH_BASE_URL=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_HOST=
+S3_REGION=auto
 MAILER_ADAPTER=SMTP
 MAILER_FROM=
 MAILER_HOST=
