--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ default:
     - mix local.rebar --force
     - mix local.hex --force
     - mix deps.get
-    - mix deps.compile
+    - mix deps.compile --force
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
