--- a/assets/package.json
+++ b/assets/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@alpinejs/persist": "^3.15.0",
     "alpinejs": "^3.15.0",
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "chart.js": "^4.4.7",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/alpinejs__persist": "^3.13.4",
