--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,18 @@ S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_HOST=
 S3_REGION=auto
+WEBDAV_URL=
+WEBDAV_USER=
+WEBDAV_PW=
 MAILER_ADAPTER=SMTP
 MAILER_FROM=
 MAILER_HOST=
 MAILER_PORT=
 MAILER_PW=
 MAILER_USER=
+PUSHOVER_USER=
+PUSHOVER_TOKEN=
+DISCORD_WEBHOOK=
 SECRET_KEY_BASE=
 DATABASE_PATH=
 HOSTNAME=example.com
