--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,12 @@ stages:
   - docker
 
 variables:
-  MIX_ENV: 'test'
+  # Docker
+  DOCKER_API_VERSION: "1.44"
+  # Registry
   REGISTRY: ghcr.io
+  # Elixir
+  MIX_ENV: 'test'
 
 default:
   before_script:
@@ -48,8 +52,6 @@ dialyzer:
 
 docker_build:
   stage: docker
-  services:
-    - docker:dind
   image: docker:cli
   before_script:
     - docker login $REGISTRY -u $REGISTRY_USER -p $REGISTRY_PASSWORD
